Partial_14Dec2021/force-app/main/default/objects/User_Taluk_Master_Junction__c/User_Taluk_Master_Junction__c.object-meta.xml
<CustomObject>
    <label>APPL User Taluk Master Junction</label>
    <nameField>
        <label>User Taluk Master Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Taluk Master Junctions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>