Partial_14Dec2021/force-app/main/default/objects/User_Taluk_Master_Junction__c/fields/AP_Taluk_Master__c.field-meta.xml
<CustomField>
    <fullName>AP_Taluk_Master__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>AP Taluk Master</label>
    <referenceTo>AP_Taluk_Master__c</referenceTo>
    <relationshipLabel>User Taluk Master Junctions</relationshipLabel>
    <relationshipName>User_Taluk_Master_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>