Partial_14Dec2021/force-app/main/default/objects/User_Taluk_Master_Junction__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <formula>Text(AP_Taluk_Master__r.Cluster__c)</formula>
    <label>Cluster</label>
    <type>Text</type>
</CustomField>