Partial_14Dec2021/force-app/main/default/objects/User_Taluk_Master_Junction__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <formula>Text(AP_Taluk_Master__r.District__c)</formula>
    <label>District</label>
    <type>Text</type>
</CustomField>