Partial_14Dec2021/force-app/main/default/objects/User_Taluk_Master_Junction__c/fields/Record_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Record_Vertical__c</fullName>
    <label>Record Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Column</fullName>
            </value>
            <value>
                <fullName>Projects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>