Partial_14Dec2021/force-app/main/default/objects/User_Taluk_Master_Junction__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>Text(AP_Taluk_Master__r.Region__c )</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>