Partial_14Dec2021/force-app/main/default/objects/User_Taluk_Master_Junction__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>Text(AP_Taluk_Master__r.State__c)</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>