Partial_14Dec2021/force-app/main/default/objects/User_Taluk_Master_Junction__c/fields/Unique_filed__c.field-meta.xml
<CustomField>
    <fullName>Unique_filed__c</fullName>
    <label>Unique filed</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>