Partial_14Dec2021/force-app/main/default/objects/User_Taluk_Master_Junction__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Taluk_Master_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>