Partial_14Dec2021/force-app/main/default/objects/User_Taluk_Master_Junction__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <formula>User__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Id</label>
    <type>Text</type>
</CustomField>