Partial_14Dec2021/force-app/main/default/objects/User_Taluk_Master_Junction__c/fields/User_Vertical__c.field-meta.xml
<CustomField>
    <fullName>User_Vertical__c</fullName>
    <formula>Text(Record_Vertical__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Vertical</label>
    <type>Text</type>
</CustomField>